# lexichunk

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PRD.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
benchmarks/: conftest.py  test_perf_chunk.py
docs/: architecture.md  extending.md
examples/: basic_usage.py  compare_chunkers.py  langchain_rag.py
src/lexichunk/: __init__.py  chunker.py  exceptions.py  metrics.py  models.py  utils.py
src/lexichunk/enrichment/: __init__.py  clause_type.py  context.py
src/lexichunk/integrations/: __init__.py  langchain.py  llama_index.py
src/lexichunk/jurisdiction/: __init__.py  eu.py  uk.py  us.py
src/lexichunk/parsers/: __init__.py  definitions.py  references.py  structure.py
src/lexichunk/strategies/: __init__.py  clause_aware.py  fallback.py
tasks/: lessons.md  todo.md
tasks/stages/: stage_immediate.md  stage_medium_term.md  stage_short_term.md
tests/: conftest.py  test_abbreviations.py  test_adversarial_extensibility.py  test_adversarial_v050.py  test_adversarial_v060.py  test_adversarial_v070.py  test_adversarial_v080.py  test_batch.py  test_char_offsets.py  test_chunk_iter.py  test_chunker.py  test_classification_confidence.py  test_clause_types.py  test_context_enricher.py  test_crossref_stats.py  test_definition_cache.py  test_definitions.py  test_eu_jurisdiction.py  test_exceptions.py  test_extra_clause_signals.py  test_integrations.py  test_jurisdiction_registry.py  test_metrics.py  test_position_scoring.py  test_properties.py  test_redos_audit.py  test_references.py  test_sanitization.py  test_structure_parser.py  test_tc_specialisation.py
tests/fixtures/: eu_gdpr_excerpt.txt  uk_service_agreement.txt  uk_terms_conditions.txt  us_msa.txt  us_terms_of_service.txt
