[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lexichunk"
version = "0.1.0"
description = "Intelligent text chunking for legal documents in RAG pipelines"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["legal", "nlp", "rag", "chunking", "text-splitting", "langchain", "llama-index"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
langchain = ["langchain-text-splitters>=0.2.0"]
llama-index = ["llama-index-core>=0.10.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = [
    "langchain-text-splitters>=0.2.0",
    "llama-index-core>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/lexichunk/lexichunk"
Repository = "https://github.com/lexichunk/lexichunk"
Issues = "https://github.com/lexichunk/lexichunk/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
lexichunk = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
