[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lexichunk"
version = "0.1.0"
description = "Intelligent text chunking for legal documents in RAG pipelines"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Emmanuel Cuyugan", email = "148863794+emmcygn@users.noreply.github.com" },
]
requires-python = ">=3.10"
keywords = ["legal", "nlp", "rag", "chunking", "text-splitting", "langchain", "llama-index"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
langchain = ["langchain-text-splitters>=0.2.0"]
llama-index = ["llama-index-core>=0.10.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = [
    "langchain-text-splitters>=0.2.0",
    "llama-index-core>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/emmcygn/lexichunk"
Repository = "https://github.com/emmcygn/lexichunk"
Issues = "https://github.com/emmcygn/lexichunk/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
lexichunk = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
