[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lexichunk"
version = "0.8.0b1"
description = "Intelligent text chunking for legal documents in RAG pipelines"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Emmanuel Cuyugan", email = "148863794+emmcygn@users.noreply.github.com" },
]
requires-python = ">=3.10"
keywords = ["legal", "nlp", "rag", "chunking", "text-splitting", "langchain", "llama-index"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
llama-index = ["llama-index-core>=0.10.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "mypy>=1.0",
    "hypothesis>=6.0",
]
all = [
    "langchain-core>=0.2.0",
    "llama-index-core>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/emmcygn/lexichunk"
Repository = "https://github.com/emmcygn/lexichunk"
Issues = "https://github.com/emmcygn/lexichunk/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
lexichunk = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = [
    "E402",   # module-level import not at top — we use logger = ... before imports
    "E501",   # line too long — handled by formatter, not linter
    "E741",   # ambiguous variable name — legal domain uses 'l' for level
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "langchain_core.*",
    "llama_index.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "benchmark: performance benchmarks (deselect with '-m \"not benchmark\"')",
]
addopts = "--benchmark-disable"
